sort.basic.cocktail.AlgCocktailSort3.scala.error
Compilation error:
AlgCocktailSort3:28: error: b is already defined as variable b
  var b=1
      ^AlgCocktailSort3:7: error: type mismatch;
 found   : Boolean(false)
 required: Int
    b=false
      ^AlgCocktailSort3:11: error: type mismatch;
 found   : Boolean(true)
 required: Int
        b=true
          ^AlgCocktailSort3:17: error: type mismatch;
 found   : Boolean(false)
 required: Int
      b=false
        ^AlgCocktailSort3:21: error: type mismatch;
 found   : Boolean(true)
 required: Int
          b=true
            ^